Revision history for HTML-Latemp-NavLinks-GenHtml

0.2.2   2014-01-30
    - Add t/cpan-changes.t and t/style-trailing-space.t .

0.2.1   2012-12-07
    - Add Test::Differences to the build_requires.
        - see http://www.cpantesters.org/cpan/report/6a6f6a60-3d76-11e2-a2f1-82091a5d253f
        and other reports.

0.2.0    2012-12-02
    - Add the 'ext' parameter to
    lib/HTML/Latemp/NavLinks/GenHtml/ArrowImages.pm .

0.1.8    2006-10-07
    - Added the pod-coverage.t file and made the files have
    full POD coverage.
    - Upgraded Test::Run::Builder.
    - Unified the derived modules interface and extracted methods
    out of both.
    - Added a test to test for a successful output.
    - Added an examples under examples/.

0.1.7    2006-09-18
    - Added the get_image_base() (over-ridable) method to customize the base
    filename of the images.
    - Changed the vanilla M::B to Test::Run::Builder.

0.1.6    2005-12-07
    - Added a Makefile.PL wrapper to the Build.PL build process (taken
    verbatim from http://search.cpan.org/dist/accessors/)

0.1.5    2005-04-29
         First CPAN version.
